fixed padding on mobile menu, i.e., centered it

--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -259,7 +259,6 @@ $intro-height-mobile: 500px;
       .navigation-menu-options{
         text-align:center;
         position: absolute;
-        height:80%;
         width:100%;
         padding: 25% 0px;
         @include setFont('Regular');
